--- a/seven/index.html
+++ b/seven/index.html
@@ -29,6 +29,11 @@
             padding: 5px;
             text-align: right;
         }
+        #scene {
+            position: absolute;
+            top: 568px;
+            left: 491px;
+        }
     </style>
 </head>
 
@@ -75,9 +80,9 @@ Camera position, bird's-eye:
     <div id="position"></div>
 </div>
 
-<br>
-Camera position, 3D:
-<div id="scene"></div>
+<div id="scene">
+    Camera position, 3D:<br>
+</div>
 
 
 <script type="text/javascript" src="../lib/jsartoolkit5/artoolkit.min.js"></script>
